test/compile_error/typemismatch.conf.2.def
config type_mismatch_conf {
	foo : list[3]<uint> = {0,2,3,4};
}
